syntax = "proto3";

option csharp_namespace = "UserAuthProto";

package UserAuth;

service UserAuthService {
  rpc Register(RegisterStudentDto) returns (RegisterResponseDto){};
  rpc UpdatePassword(UpdatePasswordDto) returns (Empty){};
}

message RegisterStudentDto {
  string name = 1;
  string firstLastName = 2;
  string secondLastName = 3;
  string rut = 4;
  string email = 5;
  string password = 6;
  string repeatedPassword = 7;
  int32 careerId = 8;
}

message RegisterResponseDto {
  string name = 1;
  string firstLastName = 2;
  string secondLastName = 3;
  string rut = 4;
  string email = 5;
  string role = 6;
  string career = 7;
  string token = 8;
}

message UpdatePasswordDto {
  string currentPassword = 1;
  string password = 2;
  string repeatedPassword = 3;
}

// Responses 
message Empty {}
